--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "echo && exit 1",
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.16.4",
     "http": "^0.0.0",
