--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "express": "^4.16.4",
     "http": "^0.0.0",
+    "knex": "^0.16.5",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "pg": "^7.11.0",
     "socket.io": "^2.2.0"
   }
 }
